# air-infer

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo/: client_grpc.py  server.py
examples/: example_multiple_models.py  example_ros_receiver.py  example_ros_receiver_multi.py  example_ros_sender.py  example_ros_sender_perf.py  example_ros_sender_perf_multi.py  example_vlm_client.py  example_vlm_server.py
src/air_infer/client/: __init__.py  vlm_triton_client.py
src/air_infer/server/: __init__.py  ros_triton_receiver.py  vlm_triton_server.py
src/air_infer/utils/: ros_utils.py  triton_manager.py  verification.py  vlm_utils.py
src/lm_inference_rpc/: __init__.py
src/lm_inference_rpc/client/: __init__.py  base_client.py  ros_triton_sender.py  vlm_triton_client.py
src/lm_inference_rpc/server/: __init__.py  base_server.py  ros_triton_receiver.py  vlm_triton_server.py
src/lm_inference_rpc/utils/: __init__.py  helpers.py  vlm_utils.py
tests/: __init__.py  test_client.py  test_server.py
